update styles and content; change main color, update titles, and adjust layout for new branding

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <link rel="icon" href="images/logo.jpg" type="image/gif" />
+    <!-- <link rel="icon" href="images/logo.jpg" type="image/gif" /> -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Roda Link - Cleopatra</title>
+    <title>Team Basket Putra - Batu</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Roda Link - Cleopatra" />
+    <meta property="og:title" content="Team Basket Putra - Batu" />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
       content="https://roda-link-cleopatra.vercel.app//"
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    />
+    /> -->
     <meta
       property="og:description"
       content="GATHERING RODALINK
@@ -57,10 +57,8 @@
       <header class="header_section long_section px-0">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="/">
-            <img src="images/logo2.png" style="width: 150px" alt="" />
-            <!-- <span>
-            RODALINK
-          </span> -->
+            <!-- <img src="images/logo2.png" style="width: 150px" alt="" /> -->
+            <span> BASKET PUTRA </span>
           </a>
           <button
             class="navbar-toggler"
@@ -83,16 +81,19 @@
                   <a class="nav-link" href="/">Beranda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="team.html">Team</a>
+                  <a class="nav-link" href="pelatih.html">Profil Pelatih</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="belanja.html">Belanja</a>
+                  <a class="nav-link" href="team.html">Profil Tim</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="fasilitator.html">Fasilitator</a>
+                  <a class="nav-link" href="jadwal.html">Jadwal Latihan</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="saluran.html">Saluran</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="kodiute.html">Kodiute</a>
                 </li>
               </ul>
             </div>
@@ -101,27 +102,31 @@
       </header>
     </div>
 
-    <section class="slider_section long_section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-5">
-            <div class="detail-box">
+    <section class="slider_section long_section" style="height: 100vh">
+      <div class="container h-100">
+        <div class="row h-100 align-items-center">
+          <div class="col-md-12">
+            <div class="detail-box text-center">
               <h1>
-                GATHERING RODALINK <br />
-                3D2N
+                Tim <span style="color: #ff6f00">Basket</span> Putra Kota Batu
+                Porprov<br />
+                2025
               </h1>
-              <p>KOTA BATU, 11-13 FEBRUARI 2025</p>
-              <div class="btn-box">
+              <p style="text-transform: uppercase">
+                Latihan Perdana <br />16 Februari 2025 <br />di Lapangan
+                Jambuluwuk
+              </p>
+              <div class="btn-box text-center">
                 <a href="team.html" class="btn1 mr-1 mb-1"> TEAM </a>
-                <a href="saluran.html" class="btn2 mb-1"> SALURAN </a>
+                <a href="jadwal.html" class="btn2 mb-1"> JADWAL </a>
               </div>
             </div>
           </div>
-          <div class="col-md-7">
-            <div class="img-box" style="padding: 60px">
-              <img src="images/logo.jpg" style="border-radius: 20px" alt="" />
-            </div>
-          </div>
+          <!-- <div class="col-md-7">
+        <div class="img-box" style="padding: 60px">
+          <img src="images/logo.jpg" style="border-radius: 20px" alt="" />
+        </div>
+        </div> -->
         </div>
       </div>
     </section>
@@ -192,7 +197,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #d92629">Cleopatra</a>
+          <a href="" style="color: #ff6f00">Kota Batu</a>
         </p>
       </div>
     </footer>
