--- a/kodiute.html
+++ b/kodiute.html
@@ -10,12 +10,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <link rel="icon" href="images/logo.jpg" type="image/gif" />
+    <!-- <link rel="icon" href="images/logo.jpg" type="image/gif" /> -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Roda Link - Cleopatra</title>
+    <title>Team Basket Putra - Batu</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -85,13 +85,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="team.html">Team</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="belanja.html">Belanja</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="fasilitator.html">Fasilitator</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                   <a class="nav-link" href="saluran.html">Saluran</a>
                 </li>
               </ul>
@@ -101,83 +101,35 @@
       </header>
     </div>
 
-    <section class="team_section layout_padding">
+    <!-- furniture section -->
+    <section class="client_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2 class="text-center">BELANJA</h2>
+          <h2>SALURAN <span style="color: #d92629">RODALINK</span></h2>
         </div>
-        <div
-          class="team-container"
-          style="margin-top: 50px; border: 1px solid #33333374; padding: 20px"
-        >
-          <!-- <h4>
-            <span style="color: #d92629; font-weight: bold">Team Merah</span> |
-            Fasilitator Herman
-          </h4> -->
-          <div class="row">
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="box" style="margin-top: 0; height: 100%">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Belanja 1</h5>
-                  <ul style="padding-left: 0">
-                    <li>1 dada ayam utuh</li>
-                    <li>300 gr daging ikan bandeng goreng</li>
-                    <li>2 batang sereh</li>
-                    <li>3 lembar daun salam</li>
-                    <li>2 ruas lengkuas</li>
-                    <li>
-                      5 buah pepaya muda ukuran kecil (potong & cuci bersih)
-                    </li>
-                    <li>2 lembar daun jeruk</li>
-                    <li>2 lembar daun salam</li>
-                    <li>1 sashet terasi</li>
-                    <li>2 pc santan karab</li>
-                  </ul>
+
+        <div class="about_section layout_padding long_section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="img-box">
+                  <img
+                    src="images/logo.jpg"
+                    style="border-radius: 10px"
+                    alt=""
+                  />
                 </div>
               </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="box" style="margin-top: 0; height: 100%">
+              <div class="col-md-6">
                 <div class="detail-box">
-                  <h5 class="font-weight-bold">Belanja 2</h5>
-                  <ul style="padding-left: 0">
-                    <li>5 buah Tahu Cokelat</li>
-                    <li>2 buah Tahu Putih</li>
-                    <li>10 buah Buncis</li>
-                    <li>7 siung Bawang Merah</li>
-                    <li>4 siung Bawang Putih</li>
-                    <li>10 lembar daun jeruk</li>
-                    <li>12 buah bawang merah</li>
-                    <li>5 buah bawang putih</li>
-                    <li>1 sdt ketumbar</li>
-                    <li>6 buah kemiri</li>
-                    <li>2 ruas kunyit</li>
-                    <li>1 ruas lengkuas</li>
-                    <li>10 buah cabe merah</li>
-                    <li>5 buah cabe keriting</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="box" style="margin-top: 0; height: 100%">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Belanja 3</h5>
-                  <ul style="padding-left: 0">
-                    <li>2 buah tahu jumbo</li>
-                    <li>1 papan tempe</li>
-                    <li>200 gr udang</li>
-                    <li>5 buah Cabe Keriting Hijau</li>
-                    <li>2 lembar Daun Salam</li>
-                    <li>2 cm Lengkuas, memarkan</li>
-                    <li>65 ml Santan Instan</li>
-                    <li>9 bawang merah</li>
-                    <li>7 bawang putih</li>
-                    <li>5 butir kemiri</li>
-                    <li>1 jempol kunyit</li>
-                    <li>2 ruas jahe</li>
-                    <li>1 sdt ketumbar</li>
-                  </ul>
+                  <p>Bergabung ke saluran Roda Link melalui Whatsapp</p>
+                  <a
+                    href="https://whatsapp.com/channel/0029Vb5wTUU9hXFEFrNsDo23"
+                    class="btn1"
+                    target="_blank"
+                  >
+                    <i class="fa fa-whatsapp"></i> Gabung
+                  </a>
                 </div>
               </div>
             </div>
@@ -185,6 +137,8 @@
         </div>
       </div>
     </section>
+
+    <!-- end furniture section -->
 
     <!-- footer section -->
     <footer class="footer_section">
