--- a/saluran.html
+++ b/saluran.html
@@ -10,12 +10,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <link rel="icon" href="images/logo.jpg" type="image/gif" />
+    <!-- <link rel="icon" href="images/logo.jpg" type="image/gif" /> -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Roda Link - Cleopatra</title>
+    <title>Team Basket Putra - Batu</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
