update meta tags and content; change Open Graph titles and descriptions, update URLs, and adjust footer text for new branding

--- a/jadwal.html
+++ b/jadwal.html
@@ -27,21 +27,17 @@
     />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Roda Link - Cleopatra" />
+    <meta property="og:title" content="Team Basket Putra - Batu" />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://roda-link-cleopatra.vercel.app//"
+      content="https://basketputra-kotabatu.vercel.app/"
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    />
-    <meta
-      property="og:description"
-      content="GATHERING RODALINK
-    3D2N"
-    />
+    /> -->
+    <meta property="og:description" content="Latihan Perdana" />
 
     <!-- font awesome style -->
     <link href="css/font-awesome.min.css" rel="stylesheet" />
@@ -57,10 +53,8 @@
       <header class="header_section long_section px-0">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="/">
-            <img src="images/logo2.png" style="width: 150px" alt="" />
-            <!-- <span>
-            RODALINK
-          </span> -->
+            <!-- <img src="images/logo2.png" style="width: 150px" alt="" /> -->
+            <span>BASKET PUTRA</span><span style="color: #ff6f00;">.</span>
           </a>
           <button
             class="navbar-toggler"
@@ -83,16 +77,19 @@
                   <a class="nav-link" href="/">Beranda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="team.html">Team</a>
+                  <a class="nav-link" href="pelatih.html">Profil Pelatih</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="belanja.html">Belanja</a>
+                  <a class="nav-link" href="team.html">Profil Tim</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="fasilitator.html">Fasilitator</a>
+                  <a class="nav-link" href="jadwal.html">Jadwal Latihan</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="saluran.html">Saluran</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="kodiute.html">Kodiute</a>
                 </li>
               </ul>
             </div>
@@ -102,95 +99,86 @@
     </div>
 
     <!-- furniture section -->
-    <section class="client_section layout_padding">
+    <section class="team_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2>FASILITATOR</h2>
+          <h2 class="text-center">JADWAL <span style="color: #ff6f00;">LATIHAN</span></h2>
         </div>
         <div
-          id="carousel-data"
-          class="carousel slide"
-          data-ride="carousel"
-          data-interval="false"
+          class="team-container"
+          style="margin-top: 50px; border: 1px solid #33333374; padding: 20px"
         >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="row">
-                <div class="col-md-12 col-lg-10 mx-auto">
-                  <div class="box">
-                    <div class="img-box col-md-6">
-                      <img src="images/herman.jpeg" alt="" />
-                    </div>
-                    <div class="detail-box col-md-6">
-                      <div class="name">
-                        <i class="fa fa-quote-left" aria-hidden="true"></i>
-                        <h6>Herman</h6>
-                      </div>
-                    </div>
-                  </div>
+          <!-- <h4>
+            <span style="color: #d92629; font-weight: bold">Team Merah</span> |
+            Fasilitator Herman
+          </h4> -->
+          <div class="row">
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="box" style="margin-top: 0; height: 100%">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Belanja 1</h5>
+                  <ul style="padding-left: 0">
+                    <li>1 dada ayam utuh</li>
+                    <li>300 gr daging ikan bandeng goreng</li>
+                    <li>2 batang sereh</li>
+                    <li>3 lembar daun salam</li>
+                    <li>2 ruas lengkuas</li>
+                    <li>
+                      5 buah pepaya muda ukuran kecil (potong & cuci bersih)
+                    </li>
+                    <li>2 lembar daun jeruk</li>
+                    <li>2 lembar daun salam</li>
+                    <li>1 sashet terasi</li>
+                    <li>2 pc santan karab</li>
+                  </ul>
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-12 col-lg-10 mx-auto">
-                  <div class="box">
-                    <div
-                      class="img-box col-md-6"
-                      style="border: 10px solid #d9ca26"
-                    >
-                      <img src="images/guntoro.jpeg" alt="" />
-                    </div>
-                    <div class="detail-box col-md-6">
-                      <div class="name">
-                        <i class="fa fa-quote-left" aria-hidden="true"></i>
-                        <h6>Guntoro</h6>
-                      </div>
-                    </div>
-                  </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="box" style="margin-top: 0; height: 100%">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Belanja 2</h5>
+                  <ul style="padding-left: 0">
+                    <li>5 buah Tahu Cokelat</li>
+                    <li>2 buah Tahu Putih</li>
+                    <li>10 buah Buncis</li>
+                    <li>7 siung Bawang Merah</li>
+                    <li>4 siung Bawang Putih</li>
+                    <li>10 lembar daun jeruk</li>
+                    <li>12 buah bawang merah</li>
+                    <li>5 buah bawang putih</li>
+                    <li>1 sdt ketumbar</li>
+                    <li>6 buah kemiri</li>
+                    <li>2 ruas kunyit</li>
+                    <li>1 ruas lengkuas</li>
+                    <li>10 buah cabe merah</li>
+                    <li>5 buah cabe keriting</li>
+                  </ul>
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-12 col-lg-10 mx-auto">
-                  <div class="box">
-                    <div
-                      class="img-box col-md-6"
-                      style="border: 10px solid #41d926"
-                    >
-                      <img src="images/robby.jpeg" alt="" />
-                    </div>
-                    <div class="detail-box col-md-6">
-                      <div class="name">
-                        <i class="fa fa-quote-left" aria-hidden="true"></i>
-                        <h6>Robby</h6>
-                      </div>
-                    </div>
-                  </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="box" style="margin-top: 0; height: 100%">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Belanja 3</h5>
+                  <ul style="padding-left: 0">
+                    <li>2 buah tahu jumbo</li>
+                    <li>1 papan tempe</li>
+                    <li>200 gr udang</li>
+                    <li>5 buah Cabe Keriting Hijau</li>
+                    <li>2 lembar Daun Salam</li>
+                    <li>2 cm Lengkuas, memarkan</li>
+                    <li>65 ml Santan Instan</li>
+                    <li>9 bawang merah</li>
+                    <li>7 bawang putih</li>
+                    <li>5 butir kemiri</li>
+                    <li>1 jempol kunyit</li>
+                    <li>2 ruas jahe</li>
+                    <li>1 sdt ketumbar</li>
+                  </ul>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="carousel_btn-container">
-            <a
-              class="carousel-control-prev"
-              href="#carousel-data"
-              role="button"
-              data-slide="prev"
-            >
-              <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a
-              class="carousel-control-next"
-              href="#carousel-data"
-              role="button"
-              data-slide="next"
-            >
-              <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
         </div>
       </div>
@@ -203,7 +191,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #d92629">Cleopatra</a>
+          <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
     </footer>
