--- a/saluran.html
+++ b/saluran.html
@@ -27,21 +27,17 @@
     />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Roda Link - Cleopatra" />
+    <meta property="og:title" content="Team Basket Putra - Batu" />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://roda-link-cleopatra.vercel.app//"
+      content="https://basketputra-kotabatu.vercel.app/"
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    />
-    <meta
-      property="og:description"
-      content="GATHERING RODALINK
-    3D2N"
-    />
+    /> -->
+    <meta property="og:description" content="Latihan Perdana" />
 
     <!-- font awesome style -->
     <link href="css/font-awesome.min.css" rel="stylesheet" />
@@ -57,10 +53,8 @@
       <header class="header_section long_section px-0">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="/">
-            <img src="images/logo2.png" style="width: 150px" alt="" />
-            <!-- <span>
-            RODALINK
-          </span> -->
+            <!-- <img src="images/logo2.png" style="width: 150px" alt="" /> -->
+            <span>BASKET PUTRA</span><span style="color: #ff6f00;">.</span>
           </a>
           <button
             class="navbar-toggler"
@@ -83,16 +77,19 @@
                   <a class="nav-link" href="/">Beranda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="team.html">Team</a>
+                  <a class="nav-link" href="pelatih.html">Profil Pelatih</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="belanja.html">Belanja</a>
+                  <a class="nav-link" href="team.html">Profil Tim</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="fasilitator.html">Fasilitator</a>
+                  <a class="nav-link" href="jadwal.html">Jadwal Latihan</a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="saluran.html">Saluran</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="kodiute.html">Kodiute</a>
                 </li>
               </ul>
             </div>
@@ -105,7 +102,7 @@
     <section class="client_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2>SALURAN <span style="color: #d92629">RODALINK</span></h2>
+          <h2>SALURAN <span style="color: #ff6f00">BASKET</span> PUTRA</h2>
         </div>
 
         <div class="about_section layout_padding long_section">
@@ -145,7 +142,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #d92629">Cleopatra</a>
+          <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
     </footer>
