--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://roda-link-cleopatra.vercel.app//"
+      content="https://basketputra-kotabatu.vercel.app/"
     />
     <!-- <meta
       property="og:image"
@@ -33,8 +33,7 @@
     /> -->
     <meta
       property="og:description"
-      content="GATHERING RODALINK
-        3D2N"
+      content="Latihan Perdana"
     />
 
     <!-- fonts style -->
@@ -58,7 +57,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="/">
             <!-- <img src="images/logo2.png" style="width: 150px" alt="" /> -->
-            <span> BASKET PUTRA </span>
+            <span>BASKET PUTRA</span><span style="color: #ff6f00;">.</span>
           </a>
           <button
             class="navbar-toggler"
@@ -197,7 +196,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #ff6f00">Kota Batu</a>
+          <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
     </footer>
