--- a/pelatih.html
+++ b/pelatih.html
@@ -21,21 +21,17 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Roda Link - Cleopatra" />
+    <meta property="og:title" content="Team Basket Putra - Batu" />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://roda-link-cleopatra.vercel.app//"
+      content="https://basketputra-kotabatu.vercel.app/"
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    />
-    <meta
-      property="og:description"
-      content="GATHERING RODALINK
-        3D2N"
-    />
+    /> -->
+    <meta property="og:description" content="Latihan Perdana" />
 
     <!-- fonts style -->
     <link
@@ -57,10 +53,8 @@
       <header class="header_section long_section px-0">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="/">
-            <img src="images/logo2.png" style="width: 150px" alt="" />
-            <!-- <span>
-            RODALINK
-          </span> -->
+            <!-- <img src="images/logo2.png" style="width: 150px" alt="" /> -->
+            <span>BASKET PUTRA</span><span style="color: #ff6f00">.</span>
           </a>
           <button
             class="navbar-toggler"
@@ -83,16 +77,19 @@
                   <a class="nav-link" href="/">Beranda</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="team.html">Team</a>
+                  <a class="nav-link" href="pelatih.html">Profil Pelatih</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="belanja.html">Belanja</a>
+                  <a class="nav-link" href="team.html">Profil Tim</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="fasilitator.html">Fasilitator</a>
+                  <a class="nav-link" href="jadwal.html">Jadwal Latihan</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="saluran.html">Saluran</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="kodiute.html">Kodiute</a>
                 </li>
               </ul>
             </div>
@@ -103,211 +100,93 @@
 
     <!-- furniture section -->
 
-    <section class="team_section layout_padding">
+    <section class="client_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2 class="text-center">TEAM BUILDING</h2>
+          <h2>PROFIL <span style="color: #ff6f00">PELATIH</span></h2>
         </div>
         <div
-          class="team-container"
-          style="margin-top: 50px; border: 1px solid #d92629; padding: 20px"
+          id="carousel-data"
+          class="carousel slide"
+          data-ride="carousel"
+          data-interval="false"
         >
-          <h4>
-            <span style="color: #d92629; font-weight: bold">Team Merah</span> |
-            Fasilitator Herman
-          </h4>
-          <div class="row">
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 1 : Regional Yoko 1</h5>
-                  <ul style="padding-left: 0">
-                    <li>Yoko Samuel</li>
-                    <li>Dodik Puryadi</li>
-                    <li>Asep Muharam</li>
-                    <li>Eva Mahayani</li>
-                    <li>Teguh Wibowo</li>
-                    <li>Erlinawati</li>
-                    <li>Andrea Maulana</li>
-                    <li>Evan Christophel</li>
-                    <li>Chandra Kurniawan</li>
-                    <li>Sandy Yudha Sebayang</li>
-                  </ul>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <div class="col-md-12 col-lg-10 mx-auto">
+                  <div class="box">
+                    <div class="img-box col-md-6">
+                      <img src="images/herman.jpeg" alt="" />
+                    </div>
+                    <div class="detail-box col-md-6">
+                      <div class="name">
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                        <h6>Guntoro Ariadi</h6>
+                        <p><em>Pelatih</em></p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 2 : Regional Yoko 2</h5>
-                  <ul style="padding-left: 0">
-                    <li>Ayub Simorangkir</li>
-                    <li>Hery Amanda</li>
-                    <li>Indra Kurniawan</li>
-                    <li>Herin Fasah</li>
-                    <li>Almesiah Bilqisthy</li>
-                    <li>Said Adi Bowo</li>
-                    <li>Giar Sugiarto</li>
-                    <li>Dea Setianingsih</li>
-                    <li>Azmi Kurniawan</li>
-                    <li>Ari Sandika</li>
-                  </ul>
+
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-12 col-lg-10 mx-auto">
+                  <div class="box">
+                    <div class="img-box col-md-6">
+                      <img src="images/herman.jpeg" alt="" />
+                    </div>
+                    <div class="detail-box col-md-6">
+                      <div class="name">
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                        <h6>Rudi Afianto</h6>
+                        <p><em>Asisten Pelatih</em></p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 3 : HQ</h5>
-                  <ul style="padding-left: 0">
-                    <li>Felicia Felita Hartono</li>
-                    <li>Lucky Tantra</li>
-                    <li>Valentania Prischa Ard</li>
-                    <li>Jennifer Emily</li>
-                    <li>Andry Kristianto</li>
-                    <li>Irwan Santoso</li>
-                    <li>Stephanie Manoppo</li>
-                    <li>Will Jeckson Simbolon</li>
-                    <li>Mahardiyan Raihan</li>
-                  </ul>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-12 col-lg-10 mx-auto">
+                  <div class="box">
+                    <div class="img-box col-md-6">
+                      <img src="images/herman.jpeg" alt="" />
+                    </div>
+                    <div class="detail-box col-md-6">
+                      <div class="name">
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                        <h6>Nuris</h6>
+                        <p><em>Asisten Pelatih</em></p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div
-          class="team-container"
-          style="margin-top: 50px; border: 1px solid #d9ca26; padding: 20px"
-        >
-          <h4>
-            <span style="color: #d9ca26; font-weight: bold">Team Kuning</span> |
-            Fasilitator Guntoro
-          </h4>
-          <div class="row">
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 4 : Regional Adit 1</h5>
-                  <ul style="padding-left: 0">
-                    <li>Aditya Septian</li>
-                    <li>Syarif Hidayatullah</li>
-                    <li>Andri Purba</li>
-                    <li>Kadek Arya</li>
-                    <li>Christian Hadinata</li>
-                    <li>Febrioka Mawahibul Riza</li>
-                    <li>Rinto Gus Panoraga</li>
-                    <li>Sri Wahyudi</li>
-                    <li>R. Kevin Adrian Danudoro</li>
-                    <li>Sugeng Santoso</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 5 : Regional Adit 2</h5>
-                  <ul style="padding-left: 0">
-                    <li>Irfan Maulana</li>
-                    <li>Sugiharto</li>
-                    <li>Bayu Aria Wardana</li>
-                    <li>Machdi Rochmad T.W</li>
-                    <li>Muhamad Arifin</li>
-                    <li>Fendy Evendy Putra</li>
-                    <li>M. Choiril Huda</li>
-                    <li>Kurniyanto</li>
-                    <li>Ghali Pranandika</li>
-                    <li>Dodiastyo Hutomo</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 6 : HQ</h5>
-                  <ul style="padding-left: 0">
-                    <li>Juliana Kurniawan</li>
-                    <li>Arief Darmawan</li>
-                    <li>Shafa Abid Ihtisan</li>
-                    <li>Samuel Adam</li>
-                    <li>Rina Mutia</li>
-                    <li>Jimmy Indra</li>
-                    <li>Permata Nirwana R</li>
-                    <li>Claudia Ressy</li>
-                    <li>M. Rizqi</li>
-                    <li>Yusuf Dwi Meirianto</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div
-          class="team-container"
-          style="margin-top: 50px; border: 1px solid #41d926; padding: 20px"
-        >
-          <h4>
-            <span style="color: #41d926; font-weight: bold">Team Hijau</span> |
-            Fasilitator Robby
-          </h4>
-          <div class="row">
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 7 : Regional Mario 1</h5>
-                  <ul style="padding-left: 0">
-                    <li>Mario Wahyu Slamet</li>
-                    <li>Ici Nurdin</li>
-                    <li>Ryan Afriansyah</li>
-                    <li>Qudratulah Alamsyah</li>
-                    <li>Victor Gerkat Jois B</li>
-                    <li>Novri Andri</li>
-                    <li>Rovita Silaban</li>
-                    <li>M. Rizky Andrean</li>
-                    <li>Dimas Muhammad Hafidz</li>
-                    <li>Catur Basuki</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 8 : Regional Mario 2</h5>
-                  <ul style="padding-left: 0">
-                    <li>Nursinggih Dwi Avriliasto</li>
-                    <li>Yosua Eka Kurniawan</li>
-                    <li>Ano Rano</li>
-                    <li>Fajrin Ramadhan</li>
-                    <li>Balkis Sapto Budiyono</li>
-                    <li>Dedy Kurniawan</li>
-                    <li>Fadhil Rizaldi</li>
-                    <li>Eko Yulianto</li>
-                    <li>Zulny Fathur Adam</li>
-                    <li>Ahmad Syahroni</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 9 : HQ</h5>
-                  <ul style="padding-left: 0">
-                    <li>Arie Satrya Budianto</li>
-                    <li>Denny Stevano</li>
-                    <li>Regita Rahmanissa</li>
-                    <li>Sugi Mulyono</li>
-                    <li>Gilberto Erwanto</li>
-                    <li>Erni Ermawati</li>
-                    <li>Harry Kurniawan</li>
-                    <li>Christin Angelita</li>
-                    <li>Saraswati Nugraheni</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+          <div class="carousel_btn-container">
+            <a
+              class="carousel-control-prev"
+              href="#carousel-data"
+              role="button"
+              data-slide="prev"
+            >
+              <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carousel-data"
+              role="button"
+              data-slide="next"
+            >
+              <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
       </div>
@@ -320,7 +199,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #d92629">Cleopatra</a>
+          <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
     </footer>
