--- a/team.html
+++ b/team.html
@@ -27,21 +27,17 @@
     />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Roda Link - Cleopatra" />
+    <meta property="og:title" content="Team Basket Putra - Batu" />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://roda-link-cleopatra.vercel.app//"
+      content="https://basketputra-kotabatu.vercel.app/"
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    />
-    <meta
-      property="og:description"
-      content="GATHERING RODALINK
-    3D2N"
-    />
+    /> -->
+    <meta property="og:description" content="Latihan Perdana" />
 
     <!-- font awesome style -->
     <link href="css/font-awesome.min.css" rel="stylesheet" />
@@ -57,10 +53,8 @@
       <header class="header_section long_section px-0">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="/">
-            <img src="images/logo2.png" style="width: 150px" alt="" />
-            <!-- <span>
-            RODALINK
-          </span> -->
+            <!-- <img src="images/logo2.png" style="width: 150px" alt="" /> -->
+            <span>BASKET PUTRA</span><span style="color: #ff6f00">.</span>
           </a>
           <button
             class="navbar-toggler"
@@ -83,16 +77,19 @@
                   <a class="nav-link" href="/">Beranda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="team.html">Team</a>
+                  <a class="nav-link" href="pelatih.html">Profil Pelatih</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="belanja.html">Belanja</a>
+                  <a class="nav-link" href="team.html">Profil Tim</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="fasilitator.html">Fasilitator</a>
+                  <a class="nav-link" href="jadwal.html">Jadwal Latihan</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="saluran.html">Saluran</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="kodiute.html">Kodiute</a>
                 </li>
               </ul>
             </div>
@@ -104,79 +101,204 @@
     <section class="team_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2 class="text-center">BELANJA</h2>
+          <h2 class="text-center">PROFIL <span style="color: #ff6f00;">TEAM</span></h2>
         </div>
         <div
           class="team-container"
-          style="margin-top: 50px; border: 1px solid #33333374; padding: 20px"
+          style="margin-top: 50px; border: 1px solid #d92629; padding: 20px"
         >
-          <!-- <h4>
+          <h4>
             <span style="color: #d92629; font-weight: bold">Team Merah</span> |
             Fasilitator Herman
-          </h4> -->
+          </h4>
           <div class="row">
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="box" style="margin-top: 0; height: 100%">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
                 <div class="detail-box">
-                  <h5 class="font-weight-bold">Belanja 1</h5>
+                  <h5 class="font-weight-bold">Tim 1 : Regional Yoko 1</h5>
                   <ul style="padding-left: 0">
-                    <li>1 dada ayam utuh</li>
-                    <li>300 gr daging ikan bandeng goreng</li>
-                    <li>2 batang sereh</li>
-                    <li>3 lembar daun salam</li>
-                    <li>2 ruas lengkuas</li>
-                    <li>
-                      5 buah pepaya muda ukuran kecil (potong & cuci bersih)
-                    </li>
-                    <li>2 lembar daun jeruk</li>
-                    <li>2 lembar daun salam</li>
-                    <li>1 sashet terasi</li>
-                    <li>2 pc santan karab</li>
+                    <li>Yoko Samuel</li>
+                    <li>Dodik Puryadi</li>
+                    <li>Asep Muharam</li>
+                    <li>Eva Mahayani</li>
+                    <li>Teguh Wibowo</li>
+                    <li>Erlinawati</li>
+                    <li>Andrea Maulana</li>
+                    <li>Evan Christophel</li>
+                    <li>Chandra Kurniawan</li>
+                    <li>Sandy Yudha Sebayang</li>
                   </ul>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="box" style="margin-top: 0; height: 100%">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
                 <div class="detail-box">
-                  <h5 class="font-weight-bold">Belanja 2</h5>
+                  <h5 class="font-weight-bold">Tim 2 : Regional Yoko 2</h5>
                   <ul style="padding-left: 0">
-                    <li>5 buah Tahu Cokelat</li>
-                    <li>2 buah Tahu Putih</li>
-                    <li>10 buah Buncis</li>
-                    <li>7 siung Bawang Merah</li>
-                    <li>4 siung Bawang Putih</li>
-                    <li>10 lembar daun jeruk</li>
-                    <li>12 buah bawang merah</li>
-                    <li>5 buah bawang putih</li>
-                    <li>1 sdt ketumbar</li>
-                    <li>6 buah kemiri</li>
-                    <li>2 ruas kunyit</li>
-                    <li>1 ruas lengkuas</li>
-                    <li>10 buah cabe merah</li>
-                    <li>5 buah cabe keriting</li>
+                    <li>Ayub Simorangkir</li>
+                    <li>Hery Amanda</li>
+                    <li>Indra Kurniawan</li>
+                    <li>Herin Fasah</li>
+                    <li>Almesiah Bilqisthy</li>
+                    <li>Said Adi Bowo</li>
+                    <li>Giar Sugiarto</li>
+                    <li>Dea Setianingsih</li>
+                    <li>Azmi Kurniawan</li>
+                    <li>Ari Sandika</li>
                   </ul>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="box" style="margin-top: 0; height: 100%">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
                 <div class="detail-box">
-                  <h5 class="font-weight-bold">Belanja 3</h5>
+                  <h5 class="font-weight-bold">Tim 3 : HQ</h5>
                   <ul style="padding-left: 0">
-                    <li>2 buah tahu jumbo</li>
-                    <li>1 papan tempe</li>
-                    <li>200 gr udang</li>
-                    <li>5 buah Cabe Keriting Hijau</li>
-                    <li>2 lembar Daun Salam</li>
-                    <li>2 cm Lengkuas, memarkan</li>
-                    <li>65 ml Santan Instan</li>
-                    <li>9 bawang merah</li>
-                    <li>7 bawang putih</li>
-                    <li>5 butir kemiri</li>
-                    <li>1 jempol kunyit</li>
-                    <li>2 ruas jahe</li>
-                    <li>1 sdt ketumbar</li>
+                    <li>Felicia Felita Hartono</li>
+                    <li>Lucky Tantra</li>
+                    <li>Valentania Prischa Ard</li>
+                    <li>Jennifer Emily</li>
+                    <li>Andry Kristianto</li>
+                    <li>Irwan Santoso</li>
+                    <li>Stephanie Manoppo</li>
+                    <li>Will Jeckson Simbolon</li>
+                    <li>Mahardiyan Raihan</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="team-container"
+          style="margin-top: 50px; border: 1px solid #d9ca26; padding: 20px"
+        >
+          <h4>
+            <span style="color: #d9ca26; font-weight: bold">Team Kuning</span> |
+            Fasilitator Guntoro
+          </h4>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 4 : Regional Adit 1</h5>
+                  <ul style="padding-left: 0">
+                    <li>Aditya Septian</li>
+                    <li>Syarif Hidayatullah</li>
+                    <li>Andri Purba</li>
+                    <li>Kadek Arya</li>
+                    <li>Christian Hadinata</li>
+                    <li>Febrioka Mawahibul Riza</li>
+                    <li>Rinto Gus Panoraga</li>
+                    <li>Sri Wahyudi</li>
+                    <li>R. Kevin Adrian Danudoro</li>
+                    <li>Sugeng Santoso</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 5 : Regional Adit 2</h5>
+                  <ul style="padding-left: 0">
+                    <li>Irfan Maulana</li>
+                    <li>Sugiharto</li>
+                    <li>Bayu Aria Wardana</li>
+                    <li>Machdi Rochmad T.W</li>
+                    <li>Muhamad Arifin</li>
+                    <li>Fendy Evendy Putra</li>
+                    <li>M. Choiril Huda</li>
+                    <li>Kurniyanto</li>
+                    <li>Ghali Pranandika</li>
+                    <li>Dodiastyo Hutomo</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 6 : HQ</h5>
+                  <ul style="padding-left: 0">
+                    <li>Juliana Kurniawan</li>
+                    <li>Arief Darmawan</li>
+                    <li>Shafa Abid Ihtisan</li>
+                    <li>Samuel Adam</li>
+                    <li>Rina Mutia</li>
+                    <li>Jimmy Indra</li>
+                    <li>Permata Nirwana R</li>
+                    <li>Claudia Ressy</li>
+                    <li>M. Rizqi</li>
+                    <li>Yusuf Dwi Meirianto</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="team-container"
+          style="margin-top: 50px; border: 1px solid #41d926; padding: 20px"
+        >
+          <h4>
+            <span style="color: #41d926; font-weight: bold">Team Hijau</span> |
+            Fasilitator Robby
+          </h4>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 7 : Regional Mario 1</h5>
+                  <ul style="padding-left: 0">
+                    <li>Mario Wahyu Slamet</li>
+                    <li>Ici Nurdin</li>
+                    <li>Ryan Afriansyah</li>
+                    <li>Qudratulah Alamsyah</li>
+                    <li>Victor Gerkat Jois B</li>
+                    <li>Novri Andri</li>
+                    <li>Rovita Silaban</li>
+                    <li>M. Rizky Andrean</li>
+                    <li>Dimas Muhammad Hafidz</li>
+                    <li>Catur Basuki</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 8 : Regional Mario 2</h5>
+                  <ul style="padding-left: 0">
+                    <li>Nursinggih Dwi Avriliasto</li>
+                    <li>Yosua Eka Kurniawan</li>
+                    <li>Ano Rano</li>
+                    <li>Fajrin Ramadhan</li>
+                    <li>Balkis Sapto Budiyono</li>
+                    <li>Dedy Kurniawan</li>
+                    <li>Fadhil Rizaldi</li>
+                    <li>Eko Yulianto</li>
+                    <li>Zulny Fathur Adam</li>
+                    <li>Ahmad Syahroni</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 9 : HQ</h5>
+                  <ul style="padding-left: 0">
+                    <li>Arie Satrya Budianto</li>
+                    <li>Denny Stevano</li>
+                    <li>Regita Rahmanissa</li>
+                    <li>Sugi Mulyono</li>
+                    <li>Gilberto Erwanto</li>
+                    <li>Erni Ermawati</li>
+                    <li>Harry Kurniawan</li>
+                    <li>Christin Angelita</li>
+                    <li>Saraswati Nugraheni</li>
                   </ul>
                 </div>
               </div>
@@ -191,7 +313,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #d92629">Cleopatra</a>
+          <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
     </footer>
